--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
+    "@netlify/blobs": "^10.4.1",
     "antd": "^5.27.4",
     "dayjs": "^1.11.18",
     "react": "^19.1.1",
