--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@fullcalendar/timegrid": "^6.1.19",
     "@netlify/blobs": "^10.4.1",
     "antd": "^5.27.4",
-    "dayjs": "^1.11.18",
+    "dayjs": "^1.11.19",
+    "i18next": "^25.8.4",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
